--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
         </span>
       </a>
       <span class="govuk-header__logotype">
-        <%= link_to 'Allocate to a Prison Offender Manager (POM)', prison_dashboard_index_path(@prison),
+        <%= link_to 'Allocate to a Prison Offender Manager (POM)', prison_dashboard_index_path(@prison.code),
                     class: "govuk-header__link govuk-header__link--homepage govuk-!-font-size-24 govuk-!-font-weight-regular"
         %>
       </span>
