--- a/app/views/overrides/new.html.erb
+++ b/app/views/overrides/new.html.erb
@@ -5,7 +5,7 @@
 <% end %>
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
-    <%= form_tag(prison_overrides_path(@prison), method: :post, id: "override_form")  do %>
+    <%= form_tag(prison_overrides_path(@prison.code), method: :post, id: "override_form")  do %>
 
       <h1 class="govuk-heading-xl govuk-!-margin-top-4">
         <%= "Why are you allocating a probation officer POM?" if @prisoner.recommended_pom_type == 'Prison officer' %>
