--- a/app/views/allocations/confirm_reallocation.html.erb
+++ b/app/views/allocations/confirm_reallocation.html.erb
@@ -3,7 +3,7 @@
 <div class="govuk-grid-row">
 
   <div class="govuk-grid-column-two-thirds">
-    <%= form_tag(prison_allocations_path(@prison), id: "confirm_allocation_form") do %>
+    <%= form_tag(prison_allocations_path(@prison.code), id: "confirm_allocation_form") do %>
       <h1 class="govuk-heading-xl govuk-!-margin-top-4">Confirm allocation</h1>
       <p class="govuk-body">You are allocating <%= "#{@prisoner.first_name} #{@prisoner.last_name}".titleize %> to <%= "#{@pom.first_name} #{@pom.last_name}".titleize %>.</p>
       <% if @pom.emails.blank? %>
@@ -24,7 +24,7 @@
       <%= hidden_field_tag("sort", params[:sort]) %>
       <%= hidden_field_tag("page", params[:page]) %>
       <%= submit_tag "Complete allocation", role: "button", draggable: "false", class: "govuk-button" %>
-      <a class="govuk-link cancel-button" href="<%= new_prison_allocation_path(@prison, @prisoner.offender_no) %>">Cancel</a>
+      <a class="govuk-link cancel-button" href="<%= new_prison_allocation_path(@prison.code, @prisoner.offender_no) %>">Cancel</a>
     <% end %>
   </div>
 
