--- a/app/views/case_information/new.html.erb
+++ b/app/views/case_information/new.html.erb
@@ -11,6 +11,6 @@
 <p class="govuk-!-margin-bottom-8">You can find this information in NDelius.</p>
 
 <%= render :partial => "form", :locals => {
-      :action => prison_case_information_index_path(@prison),
+      :action => prison_case_information_index_path(@prison.code),
       :method => :post,
       :save_text => "Save" } %>
