--- a/app/views/caseload/new.html.erb
+++ b/app/views/caseload/new.html.erb
@@ -68,7 +68,7 @@
         <td aria-label="Allocation date" class="govuk-table__cell "><%= format_date(allocation.primary_pom_allocated_at) %></td>
         <td aria-label="Role" class="govuk-table__cell "><%= allocation.responsibility %></td>
         <td aria-label="Action" class="govuk-table__cell ">
-          <%= link_to('View', prison_prisoner_path(@prison, allocation.nomis_offender_id), class: "govuk-link" ) %>
+          <%= link_to('View', prison_prisoner_path(@prison.code, allocation.nomis_offender_id), class: "govuk-link" ) %>
         </td>
       </tr>
     <% end %>
