--- a/app/views/poms/_search_box.html.erb
+++ b/app/views/poms/_search_box.html.erb
@@ -1,5 +1,5 @@
 <div class="search-box">
-  <%= form_tag(prison_caseload_index_path(@prison), method: :get, id: "search_form") do %>
+  <%= form_tag(prison_caseload_index_path(@prison.code), method: :get, id: "search_form") do %>
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-three-quarters">
         <label class="govuk-label" for="q">
