--- a/app/views/search/search.html.erb
+++ b/app/views/search/search.html.erb
@@ -39,7 +39,7 @@
         <td aria-label="Tier" class="govuk-table__cell"><%= offender.tier || '-' %></td>
         <td aria-label="POM" class="govuk-table__cell"><%= offender.allocated_pom_name || '-' %></td>
         <td aria-label="Action" class="govuk-table__cell "><%=
-          cta_for_offender(@prison, offender)
+          cta_for_offender(@prison.code, offender)
         %></td>
       </tr>
     <% end %>
