--- a/app/views/summary/_tabs_start.html.erb
+++ b/app/views/summary/_tabs_start.html.erb
@@ -5,17 +5,17 @@
   </h2>
   <ul class="govuk-tabs__list" role='tablist'>
       <li class="govuk-tabs__list-item <%= 'govuk-tabs__list-item--selected' if active == :allocated %>">
-      <a class="govuk-tabs__tab" href="<%= prison_summary_allocated_path(@prison) %>">
+      <a class="govuk-tabs__tab" href="<%= prison_summary_allocated_path(@prison.code) %>">
           See allocations (<%= @summary.allocated_total %>)
       </a>
       </li>
       <li class="govuk-tabs__list-item <%= 'govuk-tabs__list-item--selected' if active == :unallocated %>">
-      <a class="govuk-tabs__tab" href="<%= prison_summary_unallocated_path(@prison) %>">
+      <a class="govuk-tabs__tab" href="<%= prison_summary_unallocated_path(@prison.code) %>">
           Make allocations (<%= @summary.unallocated_total %>)
       </a>
       </li>
       <li class="govuk-tabs__list-item <%= 'govuk-tabs__list-item--selected' if active == :pending %>">
-      <a class="govuk-tabs__tab" href="<%= prison_summary_pending_path(@prison) %>">
+      <a class="govuk-tabs__tab" href="<%= prison_summary_pending_path(@prison.code) %>">
           Update information (<%= @summary.pending_total %>)
       </a>
       </li>
