Show banners where tasks need to be performed
When looking at caseload, and at a specific offender's profile the pages
now show notification banners alerting the user.  To this end the
determination of tasks has been moved to a separate class (currently a
model, pending a refactor to a module).

--- a/app/views/caseload/index.html.erb
+++ b/app/views/caseload/index.html.erb
@@ -2,6 +2,12 @@
   <%= render '/layouts/prison_switcher' %>
 <% end %>
 
+<% if @pending_task_count > 0 %>
+  <%= render partial: 'shared/info_banner', locals: {
+    content: "#{@pending_task_count} case updates are needed. <a href='#{prison_tasks_path(@prison)}'>Check now</a>".html_safe }
+  %>
+<% end %>
+
 <% if @pom.blank? %>
   <h2 class="govuk-heading-l">No allocated cases </h2>
 <% else %>
