--- a/app/views/early_allocations/ineligible.html.erb
+++ b/app/views/early_allocations/ineligible.html.erb
@@ -6,7 +6,7 @@
   <div class="govuk-grid-column-two-thirds">
     <div class="govuk-panel govuk-panel--confirmation">
       <h1 class="govuk-panel__title">
-        Assessment Complete
+        Assessment complete
       </h1>
       <div class="govuk-panel__body">
         Not eligible for early allocation to the community probation team
