--- a/app/views/poms/show.html.erb
+++ b/app/views/poms/show.html.erb
@@ -1,11 +1,11 @@
 
 <h1 class="govuk-heading-xl"><%= @pom.full_name %></h1>
-<h2 class="govuk-heading-m"><%= @pom.emails.first %></h2>
+<h2 class="govuk-heading-m"><%= @pom.email_address %></h2>
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-one-quarter">
     <div class="govuk-body">POM level</div>
-    <div class="govuk-body govuk-!-font-weight-bold"><%= pom_level(@pom.position) %></div>
+    <div class="govuk-body govuk-!-font-weight-bold"><%= pom_level(@pom.position(@prison)) %></div>
   </div>
   <div class="govuk-grid-column-one-quarter">
     <div class="govuk-body">Working pattern</div>
