Implement sorting and pagination

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -11,20 +11,22 @@
 </h1>
 
 <% if @pomtasks.present? %>
+  <%= render partial: 'shared/pagination', locals: {data: @pomtasks } %>
+  <br/>
  <table class="govuk-table responsive tablesorter">
     <thead class="govuk-table__head">
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="col">
-        <a href="<%= sort_link('last_name') %>">
+        <a href="<%= sort_link('offender_name') %>">
           Prisoner name
         </a>
-        <%= sort_arrow('last_name') %>
+        <%= sort_arrow('offender_name') %>
       </th>
       <th class="govuk-table__header" scope="col">
-        <a href="<%= sort_link('broken-fix-me') %>">
+        <a href="<%= sort_link('action_label') %>">
         Update needed
         </a>
-        <%= sort_arrow('broken-fix-me') %>
+        <%= sort_arrow('action_label') %>
       </th>
       <th class="govuk-table__header" scope="col">
         Action
@@ -51,4 +53,5 @@
     <% end %>
   </tbody>
 </table>
+<%= render partial: 'shared/pagination', locals: {data: @pomtasks } %>
 <% end  %>
