Fix case task templates to use prison model
A couple of places where missing @prison.code in the templates, and
found an unnecessary use of prison that was removed

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -76,7 +76,7 @@
     <div class="govuk-grid-column-one-third">
       <div class="wrapper">
         <h1 class="govuk-heading-s">
-          <%= link_to "Case updates needed", prison_tasks_path(@prison), class:"govuk-link" %>
+          <%= link_to "Case updates needed", prison_tasks_path(@prison.code), class:"govuk-link" %>
         </h1>
         <p class="govuk-body">Update information so handover dates and community probation details are correct.</p>
       </div>
