--- a/app/views/caseload/index.html.erb
+++ b/app/views/caseload/index.html.erb
@@ -4,7 +4,7 @@
 
 <% if @pending_task_count > 0 %>
   <%= render partial: 'shared/info_banner', locals: {
-    content: "#{@pending_task_count} case updates are needed. <a href='#{prison_tasks_path(@prison)}'>Check now</a>".html_safe }
+    content: "#{@pending_task_count} case updates are needed. <a href='#{prison_tasks_path(@prison.code)}'>Check now</a>".html_safe }
   %>
 <% end %>
 
