--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -47,7 +47,7 @@
           <%= pomtask.action_label %>
         </td>
         <td aria-label="Action" class="govuk-table__cell ">
-          <%= link_to('View', prison_prisoner_path(@prison, pomtask.offender_number)) %>
+          <%= link_to('View', prison_prisoner_path(@prison.code, pomtask.offender_number)) %>
         </td>
       </tr>
     <% end %>
