Update DPS link in docs

--- a/app/views/pages/help_step2.html.erb
+++ b/app/views/pages/help_step2.html.erb
@@ -14,7 +14,7 @@
     </p>
 
     <p>Sign in to Digital Prison Services using this URL:
-      <%= link_to("https://notm.service.hmpps.dsd.io/", "https://notm.service.hmpps.dsd.io/") %>
+      <%= link_to("https://digital.prison.service.justice.gov.uk", "https://digital.prison.service.justice.gov.uk") %>
     </p>
 
     <p><%=image_tag("hmpps_login_image.png") %></p>
