POM-462 - display tier from caseload rather than allocated_at_tier on allocation

--- a/app/views/caseload/index.html.erb
+++ b/app/views/caseload/index.html.erb
@@ -63,10 +63,10 @@
         <%= sort_arrow('last_name') %>
       </th>
       <th class="govuk-table__header" scope="col">
-        <a href="<%= sort_link('allocated_at_tier') %>">
+        <a href="<%= sort_link('tier') %>">
         Tier
         </a>
-        <%= sort_arrow('allocated_at_tier') %>
+        <%= sort_arrow('tier') %>
       </th>
       <th class="govuk-table__header" scope="col">
         <a href="<%= sort_link('earliest_release_date') %>">
@@ -100,7 +100,7 @@
           </span>
         </td>
         <td aria-label="Tier" class="govuk-table__cell tier">
-          <%= offender.allocated_at_tier %>
+          <%= offender.tier %>
         </td>
         <td aria-label="Release date" class="govuk-table__cell "><%= format_date(offender.earliest_release_date) %></td>
         <td aria-label="Allocation date" class="govuk-table__cell "><%= format_date(offender.primary_pom_allocated_at) %></td>
