--- a/app/views/caseload/new.html.erb
+++ b/app/views/caseload/new.html.erb
@@ -17,10 +17,10 @@
         <%= sort_arrow('last_name') %>
       </th>
       <th class="govuk-table__header" scope="col">
-        <a href="<%= sort_link('allocated_at_tier') %>">
+        <a href="<%= sort_link('tier') %>">
         Tier
         </a>
-        <%= sort_arrow('allocated_at_tier') %>
+        <%= sort_arrow('tier') %>
       </th>
       <th class="govuk-table__header" scope="col">
         <a href="<%= sort_link('sentence_start_date') %>">
@@ -61,7 +61,7 @@
           </span>
         </td>
         <td aria-label="Tier" class="govuk-table__cell ">
-          <%= allocation.allocated_at_tier %>
+          <%= allocation.tier %>
         </td>
         <td aria-label="Arrival date" class="govuk-table__cell"><%= format_date(allocation.sentence_start_date) %></td>
         <td aria-label="Release date" class="govuk-table__cell"><%= format_date(allocation.earliest_release_date) %></td>
