--- a/app/views/poms/_caseload.html.erb
+++ b/app/views/poms/_caseload.html.erb
@@ -21,10 +21,10 @@
         <%= sort_arrow('earliest_release_date') %>
       </th>
       <th class="govuk-table__header" scope="col">
-        <a href="<%= sort_link('allocated_at_tier') %>">
+        <a href="<%= sort_link('tier') %>">
           Tier
         </a>
-        <%= sort_arrow('allocated_at_tier') %>
+        <%= sort_arrow('tier') %>
       </th>
       <th class="govuk-table__header" scope="col">
         <a href="<%= sort_link('primary_pom_allocated_at') %>">
@@ -46,7 +46,7 @@
       <td aria-label="Prisoner name" class="govuk-table__cell "><%= allocation.full_name %></td>
       <td aria-label="Prisoner number" class="govuk-table__cell "><%= allocation.nomis_offender_id %></td>
       <td aria-label="Earliest release date" class="govuk-table__cell "><%= format_date(allocation.earliest_release_date) %></td>
-      <td aria-label="Tier" class="govuk-table__cell "><%= allocation.allocated_at_tier %></td>
+      <td aria-label="Tier" class="govuk-table__cell "><%= allocation.tier %></td>
       <td aria-label="Allocation date" class="govuk-table__cell "><%= format_date(allocation.primary_pom_allocated_at) %></td>
       <td aria-label="Role" class="govuk-table__cell "><%= allocation.responsibility %></td>
     </tr>
